--- a/app/views/g_script/index.html.erb
+++ b/app/views/g_script/index.html.erb
@@ -1,17 +1,5 @@
 <h1>GScript Index</h1>
-<h2>Actions For Actor</h2>
-<% Actor.all.each do |actor| -%>
-  <h3><%= actor.login %></h3>
-  <ul>
-    <% actor.actions.each do |action| -%>
-      <li>
-        <%= link_to action.iname,
-                    :action => :startup,
-                    :gaction => action.iname %>
-      </li>
-    <% end %>
-  </ul>
-<% end -%>
+<p>Click <%= link_to 'HERE', :action => :init_actions %> to update GScript entries.</p>
 
 <h2>All Actions</h2>
 <ul>
@@ -32,3 +20,17 @@
     </li><br>
   <% end %>
 </ul>
+
+<h2>Actions For Actor</h2>
+<% Actor.all.each do |actor| -%>
+  <h3><%=h actor.login %> (<%=h actor.categories.map{|c| c.iname}.join(', ') %>)</h3>
+  <ul>
+    <% actor.actions.each do |action| -%>
+      <li>
+        <%= link_to action.iname,
+                    :action => :startup,
+                    :gaction => action.iname %>
+      </li>
+    <% end %>
+  </ul>
+<% end -%>
