--- a/app/views/g_script/index.html.erb
+++ b/app/views/g_script/index.html.erb
@@ -1,9 +1,26 @@
 <h1>GScript Index</h1>
-<p>Click <%= link_to 'HERE', :action => :init_actions %> to update GScript entries.</p>
+<p>You are '<%=h @current_actor.name %>' actor.</p>
 
-<h2>All Actions</h2>
+<% form_tag url_for(:controller => :actors, :action => :login) do -%>
+  <%
+    option_tags = Actor.all.map {|actor|
+      value, name = actor.id, actor.name
+      sprintf("<option value=\"%s\"%s>%s</option>",
+              value,
+              (actor == @current_actor) ? ' selected="selected"' : '',
+              h(name))
+    }
+   %>
+  <%= hidden_field_tag(:change, 'CHANGE') -%>
+  <%= select_tag 'actor_id', option_tags.join %>
+  <%= submit_tag 'CHANGE ACTOR' %>
+<% end -%>
+<p>Click <%= link_to 'HERE', :action => :init_actions %> to update GScript actor-action relations.</p>
+
+<h2>These actions avaliable</h2>
+<p>The '<%=h @current_actor.name %>' actor can choose follow actions.</p>
 <ul>
-  <% Action.all.each do |action| -%>
+  <% @current_actor.actions.each do |action| -%>
     <li>
       <%= link_to action.iname,
                   :action => :startup,
@@ -21,16 +38,9 @@
   <% end %>
 </ul>
 
-<h2>Actions For Actor</h2>
-<% Actor.all.each do |actor| -%>
-  <h3><%=h actor.login %> (<%=h actor.categories.map(&:iname).join(', ') %>)</h3>
-  <ul>
-    <% actor.actions.each do |action| -%>
-      <li>
-        <%= link_to action.iname,
-                    :action => :startup,
-                    :gaction => action.iname %>
-      </li>
-    <% end %>
-  </ul>
-<% end -%>
+<h2>All Actions List</h2>
+<ul>
+  <% Action.all.each do |action| -%>
+    <li><%= action.iname %></li>
+  <% end %>
+</ul>
