アクション情報はファイルから読むように
・action_descが使えるようになった．

--- a/app/views/g_script/index.html.erb
+++ b/app/views/g_script/index.html.erb
@@ -26,6 +26,8 @@
       <%= link_to action.name,
                   :action => :startup,
                   :gaction => action.iname %>
+      --
+      <%=h action.desc %>
     </li>
   <% end %>
 </ul>
