いろいろと．
・アクションの実行キャンセルができるようになった．
・rake annotate_models．
・config/route.rbにて，ルーティング．
・いくつかのアクションの名前と説明を変更．
・DBのテーブル定義を修正．

--- a/app/views/actors/login.html.erb
+++ b/app/views/actors/login.html.erb
@@ -1,4 +1,4 @@
-<% form_tag url_for(:controller => :actors, :action => :login) do -%>
+<% form_tag url_for(login_path) do -%>
   <label for="actor">アクター</label><br/>
   <%
     option_tags = Actor.all.map {|actor|
