--- a/app/views/g_script/index.html.erb
+++ b/app/views/g_script/index.html.erb
@@ -66,7 +66,7 @@
     <th>Action</th>
     <th>Changes</th>
     <th>Status</th>
-    <th>CALCEL</th>
+    <th>CANCEL</th>
   </tr>
   <% ActionLog.find(:all, :order => 'id DESC').each do |log| -%>
     <tr>
