ログの基本原理を作成
ActionLogで表現しきれない所を支えるのが目的．
ActionLogにメッセージをつければ，それで済むような気もしてくる．

--- a/app/views/g_script/index.html.erb
+++ b/app/views/g_script/index.html.erb
@@ -59,6 +59,15 @@
   <% end -%>
 </table>
 
+<h1>Log</h1>
+<ul>
+  <% @current_actor.logs.each do |log| -%>
+    <li>
+      <%=h log.created_at %>: <%=h log.message %>
+    </li>
+  <% end -%>
+</ul>
+
 <h1>Action Log</h1>
 <table class="pretty_table">
   <tr>
